# apps/web/src/api/openapi.json
@@ -1305,6 +1305,11 @@
             "title": "Connection Version Id",
             "type": "string"
           },
+          "correlation_id": {
+            "format": "uuid",
+            "title": "Correlation Id",
+            "type": "string"
+          },
           "created_at": {
             "format": "date-time",
             "title": "Created At",
@@ -1384,6 +1389,7 @@
         },
         "required": [
           "id",
+          "correlation_id",
           "actor_user_id",
           "capability_id",
           "capability_version_id",
@@ -1436,6 +1442,11 @@
             "title": "Connection Version Id",
             "type": "string"
           },
+          "correlation_id": {
+            "format": "uuid",
+            "title": "Correlation Id",
+            "type": "string"
+          },
           "created_at": {
             "format": "date-time",
             "title": "Created At",
@@ -1486,6 +1497,7 @@
         },
         "required": [
           "id",
+          "correlation_id",
           "actor_user_id",
           "capability_id",
           "capability_version_id",
